Start with chatting with TomP2P